@@ -5,7 +5,8 @@
     * daemon/seahorse-daemon.c:
     * libseahorse/Makefile.am:
     * libseahorse/seahorse-unix-signal.c:
-    * libseahorse/seahorse-unix-signal.h: 
+    * libseahorse/seahorse-unix-signal.h: Stop copious polling in the background 
+    Fixes bug #354432
 
 2006-12-21  Nate Nielsen  <nielsen@memberwebs.com>
     
